[gd_scene load_steps=11 format=3 uid="uid://dlxy0ujatfuqf"]

[ext_resource type="Script" uid="uid://ccya1kmgd4dv2" path="res://scenes/codepieces/while_block.gd" id="1_1btpn"]
[ext_resource type="Texture2D" uid="uid://ctmo36jcgf758" path="res://assets/placeholders/codeblocks/loops/while_head_shoulder.png" id="2_b56jd"]
[ext_resource type="Texture2D" uid="uid://bai62glgjahr5" path="res://assets/placeholders/codeblocks/loops/while_sensor_socket.png" id="3_b56jd"]
[ext_resource type="Texture2D" uid="uid://ce856p0r2y464" path="res://assets/placeholders/codeblocks/loops/while_tab.png" id="4_clkye"]
[ext_resource type="Texture2D" uid="uid://dobuynic5g52r" path="res://assets/placeholders/codeblocks/loops/while_head_limb.png" id="5_b56jd"]
[ext_resource type="Texture2D" uid="uid://b5lrvecr0b2kt" path="res://assets/placeholders/codeblocks/loops/while_head_hand.png" id="6_clkye"]
[ext_resource type="Texture2D" uid="uid://pwxl033jtv7q" path="res://assets/placeholders/codeblocks/loops/while_body_column.png" id="7_s5hq2"]
[ext_resource type="Texture2D" uid="uid://x3m4umdxygg" path="res://assets/placeholders/codeblocks/loops/while_foot_ankle.png" id="8_ei076"]
[ext_resource type="Texture2D" uid="uid://bnhmdii812uef" path="res://assets/placeholders/codeblocks/loops/while_foot_limb.png" id="9_fwxmo"]
[ext_resource type="Texture2D" uid="uid://dw06x7ylf7m7y" path="res://assets/placeholders/codeblocks/loops/while_foot_toe.png" id="10_p01gw"]

[node name="WhileBlock" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.115
anchor_bottom = 0.073
offset_right = -0.800003
offset_bottom = 13.16
theme_override_constants/separation = 0
script = ExtResource("1_1btpn")
control_name = 3

[node name="Head" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeadShoulder" type="TextureRect" parent="Head"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_b56jd")

[node name="SensorSocket" type="TextureRect" parent="Head/HeadShoulder"]
layout_mode = 0
offset_left = 59.0
offset_top = 7.0
offset_right = 140.0
offset_bottom = 28.0
texture = ExtResource("3_b56jd")

[node name="Conditional" type="CenterContainer" parent="Head/HeadShoulder"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.9
anchor_bottom = 0.8
offset_left = 59.0
offset_top = 7.0
offset_right = 14.0
grow_horizontal = 0
grow_vertical = 0

[node name="Tab" type="Sprite2D" parent="Head/HeadShoulder"]
position = Vector2(33, 38)
texture = ExtResource("4_clkye")

[node name="Label" type="Label" parent="Head/HeadShoulder"]
layout_mode = 0
offset_left = 10.0
offset_top = 4.0
offset_right = 58.0
offset_bottom = 27.0
text = "while:"

[node name="HeadLimb" type="TextureRect" parent="Head"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_b56jd")
expand_mode = 3

[node name="HeadHand" type="TextureRect" parent="Head"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("6_clkye")

[node name="Body" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BodyColumn" type="TextureRect" parent="Body"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("7_s5hq2")

[node name="CodeBlockBox" type="VBoxContainer" parent="Body"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Foot" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FootAnkle" type="TextureRect" parent="Foot"]
layout_mode = 2
texture = ExtResource("8_ei076")

[node name="Tab" type="Sprite2D" parent="Foot/FootAnkle"]
position = Vector2(13, 20)
texture = ExtResource("4_clkye")

[node name="FootLimb" type="TextureRect" parent="Foot"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("9_fwxmo")
expand_mode = 3

[node name="FootToe" type="TextureRect" parent="Foot"]
layout_mode = 2
texture = ExtResource("10_p01gw")

[connection signal="mouse_entered" from="Head/HeadShoulder/Conditional" to="." method="_on_conditional_mouse_entered"]
[connection signal="mouse_exited" from="Head/HeadShoulder/Conditional" to="." method="_on_conditional_mouse_exited"]
